# java-jit-hooks

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: java.hpp
include/classes/: method.hpp  string.hpp
include/hde/: hde64.hpp  pstdint.hpp
include/utility/: hook.hpp
paper/: post.md
src/: main.cpp
src/hde/: hde64.cpp
src/utility/: hook.cpp  naked_hook.asm
